# Walx

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENVIRONMENT_SETUP.md  MONGODB_SETUP_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  VERCEL_DEPLOYMENT.md  package-lock.json  railway.toml  render.yaml  vercel.json
backend/: .env.example  Cargo.toml
backend/blockchain/: Cargo.toml
backend/blockchain/src/: block.rs  chain.rs  lib.rs  tests.rs  transaction.rs  wallet.rs
backend/server/: Cargo.toml
backend/server/src/: db.rs  email.rs  lib.rs  logging.rs  main.rs  models.rs  zakat.rs
backend/server/src/api/: admin.rs  auth.rs  blockchain.rs  logs.rs  mod.rs  user.rs  wallet.rs
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Explorer.tsx  History.tsx  Login.tsx  Profile.tsx  Register.tsx  Reports.tsx  SendMoney.tsx  SystemLogs.tsx
