[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.7"
ed25519-dalek = "1.0"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.4", features = ["v4"] }
