[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
dotenv = "0.15"
sha2 = "0.10"
lettre = "0.11"
env_logger = "0.10"
log = "0.4"
blockchain = { path = "../blockchain" }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
rand = "0.8"
